--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a form of SimpleUpdater from jarrettv. Please see http://jvance.com/pages/SimpleUpdater.xhtml
+This is a fork of SimpleUpdater from jarrettv. Please see http://jvance.com/pages/SimpleUpdater.xhtml
 
 Changes in this fork:
 
